[package]
name = "jbscheme"
version = "0.0.4"
authors = ["Jérome Boisvert-Chouinard"]
license = "MIT"
readme = "README.md"
edition = "2018"

[lib]
name = "jbscheme"
path = "src/lib.rs"

[[bin]]
name = "jbscheme"
path = "src/main.rs"

[dependencies]
lazy_static = "1.4"
regex = "1"
rustyline = "8.2"
structopt = "0.3"
