[package]
name = "jbscheme"
description = "A tiny embedabble interpreted Scheme dialect."
version = "0.0.5"
authors = ["Jérome Boisvert-Chouinard"]
repository = "https://github.com/jbchouinard/jbscheme"
license = "MIT"
readme = "README.md"
edition = "2018"

[lib]
name = "jbscheme"
path = "src/lib.rs"

[[bin]]
name = "jbscheme"
path = "src/main.rs"

[dependencies]
home = "0.5.3"
lazy_static = "1.4"
regex = "1"
rustyline = "8.2"
structopt = "0.3"
