[package]
name = "jibi"
description = "A work in progress interpreted Scheme dialect."
version = "0.1.7"
authors = ["Jérome Boisvert-Chouinard"]
repository = "https://github.com/jbchouinard/jibi"
homepage = "https://jbchouinard.github.io/jibi"
documentation = "https://jbchouinard.github.io/jibi/crate/jibi"
license = "MIT"
readme = "README.md"
edition = "2018"

[lib]
name = "jibi"
path = "src/lib.rs"

[[bin]]
name = "jibi"
path = "src/main.rs"

[dependencies]
home = "0.5.3"
lazy_static = "1.4"
regex = "1"
rustyline = "8.2"
structopt = "0.3"
